<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/record"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listItem"
    android:background="@color/pictureListBackground"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/pictureTitleEditField"
        style="@style/pictureListColumnModel"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/listItemStartPadding"
        android:visibility="gone" />

    <EditText
        android:id="@+id/pictureAuthorEditField"
        style="@style/pictureListColumnModel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/acceptChangesImageBtn"
        style="@style/iconStyle"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_check_24dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/cancelChangesImageBtn"
        style="@style/iconStyle"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/acceptChangesImageBtn"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_clear_accent_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/pictureTitleField"
        style="@style/pictureListColumnModel"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/listItemStartPadding" />

    <TextView
        android:id="@+id/pictureAuthorField"
        style="@style/pictureListColumnModel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/pictureDateField"
        style="@style/pictureListColumnModel"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/listItemEndPadding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemSeparator"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

    </LinearLayout>
</RelativeLayout>