<resources>
    <string name="app_name">Delta Draw</string>
    <string name="splash_header">Delta draw</string>

    <!-- tabs -->
    <string name="draw_tab_title">Draw</string>
    <string name="edit_tab_title">Edit</string>

    <!-- menu -->
    <string name="menu_clear">Clear</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_share">Share</string>
    <string name="back">Back</string>
    <string name="lib_menu_settings">Settings</string>
    <string name="lib_menu_credits">About application</string>
    <string name="lib_menu_search">Search</string>

    <!-- hint -->
    <string name="edit_page_hint">List of points is empty.\n\nCreate your owe draw
                                    by set coordinates\nof points (x,y). Fg:\np10 100, 200\np20 300, 400\n\n
                                    It will create line between points\n (100, 200) and (300, 400)</string>
    <string name="empty_lib_txt">Picture library is empty.\nStart creating your own picture</string>

    <!-- list of pictures -->
    <string name="author_txt">Author</string>
    <string name="picture_name_txt">Title</string>
    <string name="date_txt">Date</string>

    <!-- buttons -->
    <string name="set_changes_btn">Set changes</string>
    <string name="discover_new_devices">Discover new devices</string>

    <!-- toast, snackbars, alerts -->
    <string name="deleted_snackbar">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_draw_title">Create new picture</string>
    <string name="start_draw_btn">Start draw</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="saved_toast">Saved</string>
    <string name="bt_not_support_toast">Device does not support Bluetooth</string>
    <string name="connected">Connected</string>
    <string name="device_unavailable">Device is unavailable</string>

    <!-- alerts -->
    <string name="close_app_dialog">Close application?</string>
    <string name="ask_for_save_changes">Save changes?</string>

    <!-- settings -->
    <string name="settings_delete_all">Delete all</string>
    <string name="colors_amount">Colors amount</string>
    <string name="menu_color_visibility">Menu colors visible</string>
    <string name="default_settings">Default settings</string>
    <string name="setting_select_color_title">Select colors</string>
    <string name="deleteAllQuestion">Delete all images?</string>
    <string name="allDeleted">All picture deleted</string>

    <!-- colors -->
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="black">Black</string>

    <string name="credits">Author: Marcin Zglinicki\nE-mail: mzglinicki.96@gmail.com</string>
    <string name="turnMenuOffDialog">Turn off color menu?</string>
    <string name="acceptPreviousChanges">Accept previous changes</string>
    <string name="setDefaultSetting">Done</string>
    <string name="uncompletedData">Uncompleted data</string>
    <string name="errorsInList">List contain errors</string>
    <string name="errors">Error in lines:\n</string>
    <string name="error">Error in line:\n</string>
    <string name="errorCloseBtnText">Close</string>

    <string-array name="colors">
        <item>Black</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
    </string-array>
</resources>